--- a/git.html
+++ b/git.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Git and GitHub</h1>
     <p>Git is a version control system that helps developers manage changes to their code. GitHub is a platform that hosts Git repositories and provides collaboration features.</p>
+    <p>In this code world learning git and github is very important for developers to effectively collaborate and manage their projects.</p>
 </body>
 </html>
